# collecting_resources

./: CMakeLists.txt  README.md  improvements.md  main.cpp
headers/: alice_bot.hpp  bot.hpp  game.hpp  parser.hpp
src/: alice_bot.cpp  game.cpp  parser.cpp
